# sample-sheet

./: .codecov.yml  .gitignore  .python-version  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  old.tox.ini  pyproject.toml  requirements-test.txt  run-tests  setup.cfg  setup.py  tak002-171121_NB501910_0055_AHKGJ5BGX2-SampleSheet.csv  test-requirements.txt  tox.ini
.github/workflows/: pythonpackage.yml  test.yml
.pytest_cache/v/cache/: nodeids
docs/: CONTRIBUTING.md  Makefile  Tutorial.md  conf.py  docs-requirements.txt  index.rst  quick-start.rst  sample_sheet.rst  special_characters.py  tutorial.rst
sample_sheet/: __init__.py  _sample_sheet.py  _util.py  util.py
scripts/: csv-whitespace-strip  sample-sheet  sample-sheet-summary
tests/: run-tests  test_camel_case_to_snake_case.py  test_is_ipython_interpreter.py  test_read_structure.py  test_sample.py  test_sample_sheet.py  test_sample_sheetV2.py  test_sample_sheet_section.py  test_section.py
tests/resources/: V2-paired-end-no-pad.csv  V2-paired-end-seqslab.csv  V2-paired-end-with-manifest.csv  V2-paired-end.csv  paired-end-single-index-no-pad.csv  paired-end-single-index-with-manifest.csv  paired-end-single-index.csv  single-end-colliding-sample-ids.csv
