[metadata]
author = clintval
author_email = valentine.ctlin@gmail.com
url = https://github.com/clintval/sample-sheet
download_url = https://github.com/sample-sheet/archive/v0.8.0.tar.gz'
description = An Illumina Sample Sheet parsing library
long_description = file: README.md, LICENSE, docs/CONTRIBUTING.md
long_description_content_type = text/markdown
keywords = illumina, samplesheet, sample, sheet, parser, bioinformatics
requires-dist = setuptools>=30.3.0
license = MIT
classifiers =
    'Development Status :: 2 - Pre-Alpha'
    'Intended Audience :: Developers'
    'Intended Audience :: Science/Research'
    'License :: OSI Approved :: MIT License'
    'Topic :: Scientific/Engineering :: Bio-Informatics'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
project-urls =
    Documentation = https://sample-sheet.readthedocs.com
    Issue-Tracker = https://github.com/clintval/sample-sheet/issues

[options]
zip_safe = True
include_package_data = True
packages = find:
py_modules = snv_spectrum
scripts =
    scripts/sample-sheet
install_requires =
    click
    smart_open>=1.5.4
    tabulate
    terminaltables

[options.package_data]

[mypy]
warn_redundant_casts = True
warn_unused_ignores = True
mypy_path = docs/stubs
python_version = 3.6

[mypy-*]
disallow_untyped_calls = True
disallow_untyped_defs = True
warn_return_any = True
no_implicit_optional = True
strict_optional = True
ignore_missing_imports = False

[flake8]
max-line-length = 79
doctests = True
show-source = True
ignore =
exclude =
    .git
    .mypy_cache
    .pytest_cache
    libs
    docs
    tests
    __init__.py

[tool:pytest]
addopts = --verbose --doctest-modules --cov

[coverage:run]
branch = true
source = sample_sheet
parallel = true
